2014-09-15  Georg-Johann Lay  <avr@gjlay.de>

	* avrtest.c (CX): New define depending on xmega.
	* avr-insns.def (CBI, EICALL, ICALL, LDS, PUSH, RCALL, SBI)
	(SBIC, SBIS): Use CX to adjust instruction timing for xmega.

2014-09-15  Georg-Johann Lay  <avr@gjlay.de>

	* avrtest.c (opcode_data): Rename to opcode_t.  Move .size and
	.cycles to the end of the structure.
	(opcode_func_array): Adjust initialization.

2014-09-15  Georg-Johann Lay  <avr@gjlay.de>

	* Makefile: Build xmega executables and exit*.o per default.
	Strip all executables.
	(CFLAGS): Use -Os instead of -O3.
	(exit-xmega, all-xmega): Clean up.

2014-09-15  Georg-Johann Lay  <avr@gjlay.de>

	* avrtest.c (sys/time.h): New include.
	(flag_have_runtime, t_start): New variables.
	(time_sub): New function.
	(leave) [flag_have_runtime]: Print runtime.
	(parse_args) [-runtime]: New option.
	(usage): Document it.
	(main): Set t_start.

2014-09-15  Georg-Johann Lay  <avr@gjlay.de>

	* COPYING: New file.
	* avrtest.c: Update GPL copyright years.
	* avr-insn.def: Update GPL copyright years.
	* gen-flag-tables.c: Update GPL copyright years.
	(main): Transfer GPL to flag-tables.c.
	* flag-tables.c: Regenerate.

2014-09-15  Georg-Johann Lay  <avr@gjlay.de>

	Implement a ticks counter for timing measurements.

	* avrtest.h (TICKS_PORT_ADDR, TICKS_PORT): New defines.
	* avrtest.c (flag_have_ticks, ticker_locked): New variables.
	(parse_args) [-no-ticks]: New option to unset flag_have_ticks.
	(usage): Document it.
	(do_step) [flag_have_ticks]: Update cpu_data[TICKS_PORT] to
	program_cycles.
	(data_read_byte_raw): Increment ticker_locked if reading from
	TICKS_PORT[0..2].

2014-09-15  Georg-Johann Lay  <avr@gjlay.de>

	* Makefile (CFLAGS): Add -std=c99.
	(WARN): Add -pedantic.
	* avrtest.c: Use more C99.
	* gen-flag-tables.c: Same.

2014-09-15  Georg-Johann Lay  <avr@gjlay.de>

	* .svnignore: New file.

2014-09-15  Georg-Johann Lay  <avr@gjlay.de>

	* avrtest.c (opcode_func_array, enum avr_op_index_): Factor out